--- a/index.html
+++ b/index.html
@@ -67,8 +67,12 @@
               <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg>
             </div>
           </div>
-          <div class = "path-file-folder"></div>
-          <div id = "code-editor">
+          <div class = "path-file-folder-container">
+            <div class = "path-file-folder" id = "path-file-folder">
+    
+            </div>
+          </div>
+          <div id = "code-editor" onclick="FocusEditor()" tabindex = '1'>
               <div id = "editor" class = "editor-code"></div>
           </div>
           
@@ -80,6 +84,9 @@
           <div class = "terminal-container-title-bar">
             <div class = "btn-close-terminal" onclick="CloseTerminal()">
               <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 0 24 24" width="20px" fill="var(--color-text-main)"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"/></svg>
+            </div>
+            <div name="terminal-shell" id="terminal-shell">
+                Powershell
             </div>
           </div>
           <div data-augmented-ui="br-clip bl-clip" class="terminal">
@@ -156,7 +163,6 @@
     </div>
     <script>window.$ = window.jQuery = require('./js/components/Utility/jquery.js');</script>
     <script src="./renderer.js"></script>
-
     <script src = "js/storage.js"></script>
     <script src="js/components/terminal.js" defer></script>
     <script src = "js/editor-multi-session.js" defer></script>
